Add jib plugin and configure docker image, closes #5